Estilização do header e configuração da página

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <!--Cabeçalho-->
-        <header>
+        <header class="header">
             <h1>Galeria dos Sneakers</h1>
         </header>
         <!--Separação dos Cards e seus conteúdos-->
