Estilização dos cards e das imagens. Integrações e ajustes no html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h1>Galeria dos Sneakers</h1>
         </header>
         <!--Separação dos Cards e seus conteúdos-->
-        <main>
-            <section>
-                <div>
-                    <div>imagem</div>
+        <main class="container">
+            <section class="products-container">
+                <div class="cards">
+                    <div class="product-image" id="img-1"></div>
                     <h3>Sneaker 1</h3>
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
@@ -25,8 +25,8 @@
                     </p>
                     <a href="#">COMPRAR</a>
                 </div>
-                <div>
-                    <div>imagem</div>
+                <div class="cards">
+                    <div class="product-image" id="img-2"></div>
                     <h3>Sneaker 2</h3>
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
@@ -35,8 +35,8 @@
                     </p>
                     <a href="#">COMPRAR</a>
                 </div>
-                <div>
-                    <div>Imagem</div>
+                <div class="cards">
+                    <div class="product-image" id="img-3"></div>
                     <h3>Sneraker 3</h3>
                     <P>Este sneaker é muito bom pelo fato de ...</P>
                     <p>
@@ -45,8 +45,8 @@
                     </p>
                     <a href="#">COMPRAR</a>
                 </div>
-                <div>
-                    <div>Imagem</div>
+                <div class="cards">
+                    <div class="product-image" id="img-4"></div>
                     <h3>Sneaker 4</h3>
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
@@ -55,8 +55,8 @@
                     </p>
                     <a href="#">COMPRAR</a>
                 </div>
-                <div>
-                    <div>Imagem</div>
+                <div class="cards">
+                    <div class="product-image" id="img-5"></div>
                     <h3>Sneaker 5</h3>
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
@@ -65,14 +65,15 @@
                     </p>
                     <a href="#">COMPRAR</a>
                 </div>
-                <div>
-                    <div>imagem</div>
+                <div class="cards">
+                    <div class="product-image" id="img-6"></div>
                     <h3>Sneaker 6</h3>
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
                         R$
                         <span>199,90</span>
                     </p>
+                    <a href="#">COMPRAR</a>
                 </div>
 
             </section>
