--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!--Cabeçalho-->
         <header class="header">
-            <h1>Galeria dos Sneakers</h1>
+            <h1>Galeria Parfum</h1>
         </header>
         <!--Separação dos Cards e seus conteúdos-->
         <main class="container">
@@ -21,9 +21,9 @@
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
                         R$
-                        <span>199,90</span>
+                        <span class="bold">199,90</span>
                     </p>
-                    <a href="#">COMPRAR</a>
+                    <a href="#" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-2"></div>
@@ -31,9 +31,9 @@
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
                         R$
-                        <span>199,90</span>
+                        <span class="bold">199,90</span>
                     </p>
-                    <a href="#">COMPRAR</a>
+                    <a href="#" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-3"></div>
@@ -41,9 +41,9 @@
                     <P>Este sneaker é muito bom pelo fato de ...</P>
                     <p>
                         R$
-                        <span>199,90</span>
+                        <span class="bold">199,90</span>
                     </p>
-                    <a href="#">COMPRAR</a>
+                    <a href="#" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-4"></div>
@@ -51,9 +51,9 @@
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
                         R$
-                        <span>199,90</span>
+                        <span class="bold">199,90</span>
                     </p>
-                    <a href="#">COMPRAR</a>
+                    <a href="#" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-5"></div>
@@ -61,9 +61,9 @@
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
                         R$
-                        <span>199,90</span>
+                        <span class="bold">199,90</span>
                     </p>
-                    <a href="#">COMPRAR</a>
+                    <a href="#" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-6"></div>
@@ -71,12 +71,18 @@
                     <p>Este sneaker é muito bom pelo fato de ...</p>
                     <p>
                         R$
-                        <span>199,90</span>
+                        <span class="bold">199,90</span>
                     </p>
-                    <a href="#">COMPRAR</a>
+                    <a href="#" class="btn">COMPRAR</a>
                 </div>
 
             </section>
         </main>
+        <footer>
+            <p>
+                <span class="bold">Galeria Parfum</span>
+                &copy; 2023
+            </p>
+        </footer>
     </body>
 </html>
