Alteração do tema do site

--- a/index.html
+++ b/index.html
@@ -17,66 +17,66 @@
             <section class="products-container">
                 <div class="cards">
                     <div class="product-image" id="img-1"></div>
-                    <h3>Sneaker 1</h3>
-                    <p>Este sneaker é muito bom pelo fato de ...</p>
+                    <h3>Malbec Signature</h3>
+                    <p id="descricao">Versão ainda mais luxuosa para homens que não se contentam com pouco.</p>
                     <p>
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="#" class="btn">COMPRAR</a>
+                    <a href="https://www.boticario.com.br/malbec-eau-de-parfum-signature-90ml-o-boticario/" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-2"></div>
                     <h3>Sneaker 2</h3>
-                    <p>Este sneaker é muito bom pelo fato de ...</p>
+                    <p id="descricao">Amadeirado intenso, que traz a presença marcante da preciosa madeira de Copaíba.</p>
                     <p>
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="#" class="btn">COMPRAR</a>
+                    <a href="https://www.natura.com.br/p/essencial-unico-deo-parfum-masculino-90-ml/103348?utm_source=bing&utm_medium=cpc&utm_term=103348&cnddefault=true" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-3"></div>
                     <h3>Sneraker 3</h3>
-                    <P>Este sneaker é muito bom pelo fato de ...</P>
+                    <P id="descricao">Fragrância oriental, adocicada e sensual. Sofisticado blend da perfumaria nacional.</P>
                     <p>
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="#" class="btn">COMPRAR</a>
+                    <a href="https://www.boticario.com.br/the-blend-bourbon-eau-de-parfum-100ml?q=bur" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-4"></div>
                     <h3>Sneaker 4</h3>
-                    <p>Este sneaker é muito bom pelo fato de ...</p>
+                    <p id="descricao">Um amadeirado fresco. Com o fruto chinês evodia, o eau de parfum é energizante!</p>
                     <p>
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="#" class="btn">COMPRAR</a>
+                    <a href="https://www.mercadolivre.com.br/o-boticario-zaad-go-edp-95ml-para-masculino/p/MLB17368310?pdp_filters=category:MLB6284#searchVariation=MLB17368310&position=1&search_layout=grid&type=product&tracking_id=eb780bf2-a69e-40e9-996a-110e6a03bc79" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-5"></div>
                     <h3>Sneaker 5</h3>
-                    <p>Este sneaker é muito bom pelo fato de ...</p>
+                    <p id="descricao">Zaad Expedition te instiga a explorar o mundo, para você viver tudo que a vida te reserva.</p>
                     <p>
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="#" class="btn">COMPRAR</a>
+                    <a href="https://www.boticario.com.br/zaad-expedition-eau-de-parfum-95ml/" class="btn">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-6"></div>
                     <h3>Sneaker 6</h3>
-                    <p>Este sneaker é muito bom pelo fato de ...</p>
+                    <p id="descricao">As instigantes notas metálicas e o calor da madeira de Copaíba e Cumaru arrepiam a pele.</p>
                     <p>
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="#" class="btn">COMPRAR</a>
+                    <a href="https://www.natura.com.br/p/natura-homem-cor-agio-100-ml/89834?consultoria=default&listTitle=search%20results%20list%20showcase%20-%20homem%20coragio&position=1" class="btn">COMPRAR</a>
                 </div>
 
-            </section>
+            </section> 
         </main>
         <footer>
             <p>
