Ajuste final no html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="https://www.boticario.com.br/malbec-eau-de-parfum-signature-90ml-o-boticario/" class="btn">COMPRAR</a>
+                    <a href="https://www.boticario.com.br/malbec-eau-de-parfum-signature-90ml-o-boticario/" class="btn" target="_blank">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-2"></div>
@@ -33,7 +33,7 @@
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="https://www.natura.com.br/p/essencial-unico-deo-parfum-masculino-90-ml/103348?utm_source=bing&utm_medium=cpc&utm_term=103348&cnddefault=true" class="btn">COMPRAR</a>
+                    <a href="https://www.natura.com.br/p/essencial-unico-deo-parfum-masculino-90-ml/103348?utm_source=bing&utm_medium=cpc&utm_term=103348&cnddefault=true" class="btn" target="_blank">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-3"></div>
@@ -43,7 +43,7 @@
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="https://www.boticario.com.br/the-blend-bourbon-eau-de-parfum-100ml?q=bur" class="btn">COMPRAR</a>
+                    <a href="https://www.boticario.com.br/the-blend-bourbon-eau-de-parfum-100ml?q=bur" class="btn" target="_blank">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-4"></div>
@@ -53,7 +53,7 @@
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="https://www.mercadolivre.com.br/o-boticario-zaad-go-edp-95ml-para-masculino/p/MLB17368310?pdp_filters=category:MLB6284#searchVariation=MLB17368310&position=1&search_layout=grid&type=product&tracking_id=eb780bf2-a69e-40e9-996a-110e6a03bc79" class="btn">COMPRAR</a>
+                    <a href="https://www.mercadolivre.com.br/o-boticario-zaad-go-edp-95ml-para-masculino/p/MLB17368310?pdp_filters=category:MLB6284#searchVariation=MLB17368310&position=1&search_layout=grid&type=product&tracking_id=eb780bf2-a69e-40e9-996a-110e6a03bc79" class="btn" target="_blank">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-5"></div>
@@ -63,7 +63,7 @@
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="https://www.boticario.com.br/zaad-expedition-eau-de-parfum-95ml/" class="btn">COMPRAR</a>
+                    <a href="https://www.boticario.com.br/zaad-expedition-eau-de-parfum-95ml/" class="btn" target="_blank">COMPRAR</a>
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-6"></div>
@@ -73,7 +73,7 @@
                         R$
                         <span class="bold">199,90</span>
                     </p>
-                    <a href="https://www.natura.com.br/p/natura-homem-cor-agio-100-ml/89834?consultoria=default&listTitle=search%20results%20list%20showcase%20-%20homem%20coragio&position=1" class="btn">COMPRAR</a>
+                    <a href="https://www.natura.com.br/p/natura-homem-cor-agio-100-ml/89834?consultoria=default&listTitle=search%20results%20list%20showcase%20-%20homem%20coragio&position=1" class="btn" target="_blank">COMPRAR</a>
                 </div>
 
             </section> 
