--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-2"></div>
-                    <h3>Sneaker 2</h3>
+                    <h3>Essencial Único</h3>
                     <p id="descricao">Amadeirado intenso, que traz a presença marcante da preciosa madeira de Copaíba.</p>
                     <p>
                         R$
@@ -37,7 +37,7 @@
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-3"></div>
-                    <h3>Sneraker 3</h3>
+                    <h3>The Blend Burbon</h3>
                     <P id="descricao">Fragrância oriental, adocicada e sensual. Sofisticado blend da perfumaria nacional.</P>
                     <p>
                         R$
@@ -47,7 +47,7 @@
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-4"></div>
-                    <h3>Sneaker 4</h3>
+                    <h3>Zaad Go</h3>
                     <p id="descricao">Um amadeirado fresco. Com o fruto chinês evodia, o eau de parfum é energizante!</p>
                     <p>
                         R$
@@ -57,7 +57,7 @@
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-5"></div>
-                    <h3>Sneaker 5</h3>
+                    <h3>Zaad Expedition</h3>
                     <p id="descricao">Zaad Expedition te instiga a explorar o mundo, para você viver tudo que a vida te reserva.</p>
                     <p>
                         R$
@@ -67,7 +67,7 @@
                 </div>
                 <div class="cards">
                     <div class="product-image" id="img-6"></div>
-                    <h3>Sneaker 6</h3>
+                    <h3>Homem Cora.gio</h3>
                     <p id="descricao">As instigantes notas metálicas e o calor da madeira de Copaíba e Cumaru arrepiam a pele.</p>
                     <p>
                         R$
